# merkql

./: .gitlab-ci.yml  Cargo.toml  FAILURE-MODES.md  LICENSE  NOTIFY-PROMPT.md  PRODUCT.md  README.md
.github/workflows/: ci.yml  release.yml
benches/: throughput.rs
docs/: examples.html  index.html  replacing-kafka.html
docs/examples/: audit-trail.html  event-sourced-cart.html  sensor-pipeline.html
merkql-notify/: Cargo.toml
merkql-notify-sns/: Cargo.toml
merkql-notify-sns/src/: lib.rs
merkql-notify-sns/tests/: cucumber.rs
merkql-notify-sns/tests/features/: sns.feature
merkql-notify-sqs/: Cargo.toml
merkql-notify-sqs/src/: lib.rs
merkql-notify-sqs/tests/: cucumber.rs
merkql-notify-sqs/tests/features/: sqs.feature
merkql-notify-webhook/: Cargo.toml
merkql-notify-webhook/src/: lib.rs
merkql-notify-webhook/tests/: cucumber.rs
merkql-notify-webhook/tests/features/: webhook.feature
merkql-notify/tests/: cucumber.rs
merkql-notify/tests/features/: notify_core.feature
src/: broker.rs  commit.rs  compression.rs  consumer.rs  group.rs  hash.rs  lib.rs  node.rs  notify.rs  partition.rs  producer.rs  record.rs  segment.rs  store.rs  topic.rs  tree.rs  utils.rs
tests/: jepsen_checkers.rs  jepsen_nemesis.rs  jepsen_proptest.rs  jepsen_report.rs  kafka_compat_test.rs  merkle_integrity_test.rs  pack_validation.rs  scale_test.rs  v2_features_test.rs
tests/common/: mod.rs
