[package]
name = "merkql"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
bincode = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
hdrhistogram = "7"
serde_json = "1"

[[bench]]
name = "throughput"
harness = false
