[workspace]
members = [
    ".",
    "examples/sensor-pipeline",
    "examples/audit-trail",
    "examples/event-sourced-cart",
    "merkql-notify",
    "merkql-notify-webhook",
    "merkql-notify-sns",
    "merkql-notify-sqs",
]

[package]
name = "merkql"
version = "0.1.0"
edition = "2024"
description = "Embedded event log with Kafka-compatible semantics and merkle tree integrity verification"
license = "MIT"
keywords = ["kafka", "event-streaming", "merkle-tree", "audit-log", "embedded"]
categories = ["data-structures", "database-implementations"]
readme = "README.md"
repository = "https://github.com/tailoredshapes/merkql"
homepage = "https://tailoredshapes.github.io/merkql/"
documentation = "https://tailoredshapes.github.io/merkql/"

[dependencies]
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
bincode = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
lz4_flex = "0.11"
fs2 = "0.4"
crc32fast = "1"
merkql-notify = { path = "merkql-notify", optional = true }
tokio = { version = "1", features = ["rt"], optional = true }
tracing = { version = "0.1", optional = true }
hex = { version = "0.4", optional = true }

[features]
default = []
notify = ["dep:merkql-notify", "dep:tokio", "dep:tracing", "dep:hex"]

[dev-dependencies]
tempfile = "3"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
hdrhistogram = "7"
serde_json = "1"

[[bench]]
name = "throughput"
harness = false
