[package]
name = "merkql-notify-sqs"
version = "0.1.0"
edition = "2024"
description = "AWS SQS notification plugin for merkql"
license = "MIT"
repository = "https://github.com/tailoredshapes/merkql"
keywords = ["kafka", "event-streaming", "aws", "sqs", "notification"]
categories = ["web-programming", "asynchronous"]

[dependencies]
merkql = { version = "0.2.0", path = "..", features = ["notify"] }
aws-sdk-sqs = "1"
aws-config = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1" }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
cucumber = "0.21"
futures = "0.3"
aws-smithy-mocks-experimental = "0.2"
aws-smithy-runtime-api = "1"

[[test]]
name = "cucumber"
harness = false
