[package]
name = "merkql-notify-webhook"
version = "0.1.0"
edition = "2024"
description = "HTTP webhook notification plugin for merkql"
license = "MIT"
keywords = ["kafka", "event-streaming", "webhook", "notification"]
categories = ["web-programming", "asynchronous"]

[dependencies]
merkql-notify = { path = "../merkql-notify" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
async-trait = "0.1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
wiremock = "0.6"
cucumber = "0.21"
futures = "0.3"

[[test]]
name = "cucumber"
harness = false
